deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: populationapp
  labels:
    app: populationapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: populationapp
  template:
    metadata:
      labels:
        app: populationapp
    spec:
      containers:
      - name: populationapp
        image: iqbaldocker1/population_app:1.0
        ports:
        - containerPort: 5000
