service.yaml
apiVersion: v1
kind: Service
metadata:
  name: populationapp-svc
spec:
  type: ClusterIP
  selector:
    app: populationapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
