kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: populationapp
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /population
        pathType: ImplementationSpecific
        backend:
          service:
            name: populationapp-svc
            port:
              number: 80
